implemented Martins comments

--- a/RL_vehicles_references.bib
+++ b/RL_vehicles_references.bib
@@ -286,3 +286,39 @@ month = {11},
 pages = {},
 title = {Modular Multitask Reinforcement Learning with Policy Sketches}
 }
+
+@inproceedings{idm_plus,
+author = {Schakel, W.J. and Arem, B. and Netten, Bart},
+year = {2010},
+month = {10},
+pages = {759 - 764},
+title = {Effects of Cooperative Adaptive Cruise Control on traffic flow stability},
+doi = {10.1109/ITSC.2010.5625133}
+}
+
+@inproceedings{relu,
+author = {Nair, Vinod and Hinton, Geoffrey E.},
+title = {Rectified Linear Units Improve Restricted Boltzmann Machines},
+year = {2010},
+isbn = {9781605589077},
+publisher = {Omnipress},
+address = {Madison, WI, USA},
+pages = {807–814},
+numpages = {8},
+location = {Haifa, Israel},
+series = {ICML'10}
+}
+
+@article{numericalUpdateMethodsTreiber,
+   title={Comparing numerical integration schemes for time-continuous car-following models},
+   volume={419},
+   ISSN={0378-4371},
+   url={http://dx.doi.org/10.1016/j.physa.2014.09.061},
+   DOI={10.1016/j.physa.2014.09.061},
+   journal={Physica A: Statistical Mechanics and its Applications},
+   publisher={Elsevier BV},
+   author={Treiber, Martin and Kanagaraj, Venkatesan},
+   year={2015},
+   month={Feb},
+   pages={183–195}
+}
