--- a/RL_vehicles.tex
+++ b/RL_vehicles.tex
@@ -170,7 +170,7 @@ $\gamma^k r_{t+k}$ the expected contribution $k$ time steps ahead.
   tasks with a continuous action and state space, such as in
   \cite{SafeEfficientAndComfortable}, \cite{ComparisonRLvsMPC} or
   \cite{HumanLikeAutonomouCF}. The original work can be found in
-  \cite{DDPG}. DDPG is an Actor-Critic method, that uses an Actor  $\mu\left(s \mid \theta^{\mu}\right)$ with weights $\theta^{\mu} $ to propose an action based on a given state $s$ and a Critic $Q\left(s, a \mid \theta^{Q}\right) $ with weights  $\theta^{Q}$ to predict if the action is good or bad, based on a given state $s$ and action $a$. To achieve a better training stability, DDPG uses target networks  $\mu^{\prime}$ and $Q^{\prime}$ for Actor and Critic. While training, these networks are updated slowly, hence keeping the estimated targets stable. Furthermore DDPG uses Experience Replay, that implements a Replay Buffer $R$, where a list of tuples $\left(s_{t}, a_{t}, r_{t}, s_{t+1}\right)$ are stored. Instead of learning from the most recent experience, DDPG learns from sampling a mini-batch from the experience buffer. To implement better exploration by the Actor network, DDPG uses noisy perturbations, specifically an Ornstein-Uhlenbeck process for generating noise. It samples noise from a correlated normal distribution. The entire DDPG algorithm is shown in Algorithm~\ref{alg:ddpg}. 
+  \cite{DDPG}. DDPG is an actor-critic method, that uses an actor $\mu\left(s \mid \theta^{\mu}\right)$ with weights $\theta^{\mu} $ to propose an action based on a given state $s$ and a critic $Q\left(s, a \mid \theta^{Q}\right) $ with weights  $\theta^{Q}$ to predict if the action is good or bad, based on a given state $s$ and action $a$. To achieve a better training stability, DDPG uses target networks  $\mu^{\prime}$ and $Q^{\prime}$ for actor and Critic. While training, these networks are updated slowly, hence keeping the estimated targets stable. Furthermore DDPG uses Experience Replay, that implements a Replay Buffer $R$, where a list of tuples $\left(s_{t}, a_{t}, r_{t}, s_{t+1}\right)$ are stored. Instead of learning from the most recent experience, DDPG learns from sampling a mini-batch from the experience buffer. To implement better exploration by the actor network, DDPG uses noisy perturbations, specifically an Ornstein-Uhlenbeck process for generating noise. It samples noise from a correlated normal distribution. The entire DDPG algorithm is shown in Algorithm~\ref{alg:ddpg}. 
   
   \begin{algorithm}
   	\label{alg:ddpg}
@@ -212,8 +212,8 @@ $\gamma^k r_{t+k}$ the expected contribution $k$ time steps ahead.
   set but have their own reward signal and state space. At each
   time step, every subagent reports a numerical preference for
   each available action to an arbitrator, which then selects one
-  of the actions for the agent as a whole to take (\cite{MRL}). There are numerous works, that are using a modularized Reinforcement Learning approach, like in \cite{MRLexample1}, \cite{MRLexample2} or \cite{MRLexample3} to name just a few. The advantage of decomposing multiple-goal reward functions with MRL, we also want to use in this work. 
-  Figure \ref{fig:MRL} shows the architecture of our MRL System. We divide our car-following problem into two subtasks, handled by two different policies. The Free-Driving-Policy refers to free driving and aims to not to exceed a desired speed. The Car-Following-Policy refers to following a vehicle and aims to keep a reasonable gap to a leader vehicle. Although both policies are trained with different reward functions and in different training environments, they both output an acceleration value. As an arbitrator between both accelerations we use a simple min-function. In the next sections the model specifications of the Free-Driving-Policy and the Car-Following-Policy, which are both trained with the DDPG algorithm, are described in detail.
+  of the actions for the agent as a whole to take (\cite{MRL}). There are numerous works, that are using a modularized Reinforcement Learning approach, like in \cite{MRLexample1}, \cite{MRLexample2} or \cite{MRLexample3} just to name a few. The advantage of decomposing multiple-goal reward functions with MRL, we also want to use in this work. 
+  Figure \ref{fig:MRL} shows the architecture of our MRL System. We divide our car-following problem into two subtasks, handled by two different policies. The Free-Driving Policy refers to free driving and aims to not to exceed a desired speed. The Car-Following Policy refers to following a vehicle and aims to keep a reasonable gap to a leader vehicle. Although both policies are trained with different reward functions and in different training environments, they both output an acceleration value. As an arbitrator between both accelerations we use a simple min-function. We adopted this approach from the IDM+, that also uses separate terms for free-flow and interaction with a leading vehicle (\cite{idm_plus}). In the next sections the model specifications of the Free-Driving Policy and the Car-Following Policy, which are both trained with the DDPG algorithm, are described in detail.
   
   \begin{figure}
   	\centering
@@ -228,7 +228,7 @@ $\gamma^k r_{t+k}$ the expected contribution $k$ time steps ahead.
 
 
 
-\section{Free-Driving-Policy}
+\section{Free-Driving Policy}
 \subsection{Action and state space}
 \label{actionSpace1}
  The defined modularized RL approach requires that the action space of both sub-policies are identical. To enable comfortable driving and allow for a maximum braking deceleration in safety-critical
@@ -246,7 +246,7 @@ situations, the acceleration is defined as a continuous variable in the
 
 The state space defines the observations that the 
 vehicle can receive from the environment. To compute an optimal
-acceleration, the following vehicle observes its own acceleration $a$,
+acceleration, the following vehicle observes its own acceleration $\dot{v}$,
 and its own speed $v$. Linear translation and scaling is used to
 reduce the dimensions and to bring all observations approximately into
 the same range of $[0,1]$. The observation at time step $t$ is defined
@@ -294,12 +294,11 @@ where all the factors are evaluated at time step $t$.
 \label{training_environment1}
 In order to train the RL agent for the task of keeping a desired
 speed, the training environment is defined as follows. To describe the
-dynamics of the vehicle, a point-mass kinematic model is used. \martin{For
+dynamics of the vehicle, a point-mass kinematic model is used. For
 updating the speed and position for time step $t + 1$ the Euler and
-ballistic methods are used, respectively.}
-\martin{The roman subscripts ('sub'') are only used for textual
-  subscripts ($x\sub{max}$, $x\sub{phys}$), not for variable
-  subscripts. There, the normal underscore is used}
+ballistic methods are used, respectively. This approach is recommended in \cite{numericalUpdateMethodsTreiber} as an efficient
+and robust scheme for integrating car-following models.
+
 \begin{equation}
 	v_{t+1} = v_{t} + a_{t} d
 \end{equation}
@@ -313,16 +312,12 @@ with $d$ corresponding to the simulation step size, which is globally
 set to \unit[100]{ms}. To train the RL agent, a training episode has to be defined. One training episode contains 300 time steps and the vehicle's initial speed is set randomly in the range $[0,v\sub{des}]$.
 
 \subsection{RL hyperparameters}
-Both neural networks, critic and actor,\martinc{critic and actor are
-  generic concepts, thus lowercase. Named policies (Free-Driving
-  Policy or free-driving policy) may be written upper- or lowercase but
-  always without a hyphen connecting the last word} are feed-forward neural
+Both neural networks, critic and actor, are feed-forward neural
 networks with one layer of hidden neurons, containing 16 neurons (see
-Figure \ref{fig:MRL}). ReLU activation functions are used
-\martinc{define ReLU or give a reference}.  The learning rate for
-Critic and Actor is set to 0.001. For the exploration of the action
+Figure \ref{fig:MRL}). ReLU activation functions (\cite{relu}) are used. The learning rate for
+critic and actor is set to 0.001. For the exploration of the action
 space, an exploration noise model has to be defined. We adopted a
-\martin{zero-reverting} Ornstein-Uhlenbeck process with $\Theta = 0.15$  and $\sigma = 0.2$ as suggested in \cite{DDPG}. The update rate of the target networks is set to 0.001.
+zero-reverting Ornstein-Uhlenbeck process with $\Theta = 0.15$  and $\sigma = 0.2$ as suggested in \cite{DDPG}. The update rate of the target networks is set to 0.001.
 All DDPG parameters are presented in Table \ref{tab:DDPGparameters}.
 
 
@@ -331,7 +326,7 @@ All DDPG parameters are presented in Table \ref{tab:DDPGparameters}.
 	\label{tab:DDPGparameters} 
 	\begin{center}
 		\begin{tabular}{ p{0.4\textwidth} p{0.2\textwidth}  p{0.2\textwidth} }
-			 & Free-Driving-Policy & Car-Following-Policy \\ \hline
+			 & Free-Driving Policy & Car-Following Policy \\ \hline
 			Learning rate & 0.001 & 0.001\\ 
 			Reward discount factor & 0.95 & 0.95 \\ 
 			Experience buffer length & 100000 & 100000 \\ 
@@ -348,37 +343,34 @@ All DDPG parameters are presented in Table \ref{tab:DDPGparameters}.
 \end{table}
 
 
-\section{Car-Following-Policy}
+\section{Car-Following Policy}
 \subsection{Action and state space}
 \label{actionSpace1}
-To match the action space of the Free-Driving-Policy, the acceleration is analogously defined as a continuous variable in the range between $a\sub{\rm min} = \unit[-9]{m/s^2}$ and 
+To match the action space of the Free-Driving Policy, the acceleration is analogously defined as a continuous variable in the range between $a\sub{\rm min} = \unit[-9]{m/s^2}$ and 
 $a\sub{\rm max} =\unit[2]{m/s^2}$.
 
 
 The state space defines the observations that the following
 vehicle can receive from the environment. To compute an optimal
 acceleration, the following vehicle uses its own acceleration $a$,
-its own speed $v$, the \martin{leader's speed $v_l$},
-and the (bumper-to-bumper)
-gap $g$ \martinc{replaced gap $s$ by gap $g$, also 
-$s_0\to g_0, s^*\to g^*$.}
+its own speed $v$, the leader's speed $v_l$,
+and the (bumper-to-bumper) gap $g$.
  Again, linear translation and scaling is used
 to reduce the dimensions and to bring all observations approximately
-into the same range of $[0,1]$. \martinc{The third state usually is in
-  $[-1,1]$ and $g/g\sub{max}$ needs a fallback if there is no leader} The observation at time step $t$ is defined as
+into the same range of $[-1,1]$. The observation at time step $t$ is defined as
 
 \begin{equation}
 s_t = 
 \begin{pmatrix} 
 \frac{v}{v\sub{des}} \\ 
-\frac{a-a\sub{\rm min}}{a\sub{\rm max} - a\sub{\rm min}}\\
+\frac{\dot{v}-a\sub{\rm min}}{a\sub{\rm max} - a\sub{\rm min}}\\
 \frac{v_l-v}{v\sub{des}}\\
-\frac{s}{s\sub{\rm max}}
+\frac{g}{g\sub{\rm max}}
 
 \end{pmatrix},
 \end{equation}
 %
-where $g\sub{max}$ is set to  \unit[200]{m}.
+where $g\sub{max}$ is set to  \unit[200]{m}. When $g$ exceeds  $g\sub{max}$ or there is no leader, $g$ is set to  $g\sub{max}$.
 
 \subsection{Reward Function}
 \label{rewardFunction}
@@ -415,20 +407,15 @@ The first factor addresses the driver's
 response in safety-critical situations by comparing the
 kinematically needed deceleration (assuming an
 unchanged speed of the leader) with the
-comfortable deceleration $b\sub{comf}$, \martinc{a theta function
-  $\Theta(v-v_l)=\Theta(-v_l-v)$ is missing in Eq.~\eqref{bkin}}
-\martinc{Why a tanh function? \eqref{r2} has a kink at zero and
-  flattens if the situation becomes really critical. Why not 
-$-((b\sub{kin}-b\sub{comf})/a\sub{min})^2
-  \Theta(b\sub{kin}-b\sub{comf})$ possibly normalized to a max of 1 if
-  this is needed?}
+comfortable deceleration $b\sub{comf}$,
+
 
 
 \begin{equation}
 \label{r2}
 r_1 = 
 \begin{cases}
--\tanh\left(\frac{b_{kin}-b\sub{comf}}{\martin{-a\sub{min}}}\right),& \text{if } b_{kin}>b\sub{comf}\\
+-\tanh\left(\frac{b_{kin}-b\sub{comf}}{-a\sub{min}}\right),& \text{if } b_{kin}>b\sub{comf}\\
 0,              & \text{otherwise}
 \end{cases}
 \end{equation}
@@ -436,22 +423,21 @@ r_1 =
 with
 \begin{equation}
 \label{bkin}
-b_{kin} = \frac{(v_l-v)^2}{g}
+b_{kin} = 
+\begin{cases}
+\frac{(v-v_l)^2}{g},& \text{if } v>v_l\\
+0,              & \text{otherwise}
+\end{cases}
 \end{equation}
 The argument of the tanh function with  the
-maximum possible deceleration (\martin{$\approx \unit[9]{m/s^2}$} on dry roads) gives a
+maximum possible deceleration ($\approx \unit[9]{m/s^2}$ on dry roads) gives a
 non-dimensional measure for the seriousness of the critical situation
 with values 
 near or above 1 indicating an imminent crash.  The tanh function functions as a limitation for the reward value to the range [-1,0]. This has shown to make the learning process more stable. Notice that the case distinction in ~\eqref{r2}  ensures that
-this term is not activated in non-critical situations.
+this term is not activated in non-critical situations. The purpose of factor $r_1$ is twofold: It motivates the follower vehicle to brake in safety-critical or near-crash situations.  Furthermore it motivates the follower vehicle also to brake early in non-critical situations, where $ v>v_l$, in order to achieve a comfortable approaching of the leader vehicle.
 
 The second part of the reward function aims to not fall below a reasonable
-distance to the leading vehicle. \martinc{cf. my comment in the chat of
-  the meeting May 26. There, I suggested Erlang functions $r(x)=x^n
-  \exp(-\lambda x)$, e.g., $x \exp(-\lambda x)$. 
-with $1/\lambda=s-g\sub{opt}$. The fact that it is constant instead of linearly
-  decreasing for large gaps does not matter since then the
-  free-traffic regime takes over, anyway}
+distance to the leading vehicle.
 
 
 \begin{equation}
@@ -502,13 +488,12 @@ driving style. The results for different values of $T$ can
 be found in Section \ref{sec:differentT}. Different functions for $g
 > g^*$ has been applied, but the best results regarding a smooth and
 comfortable approaching of the following vehicle has been reached with
-a linear function. Also, a high value of $T\sub{lim}$ results in an
-early deceleration and comfortable approaching.
+a linear function. Furthermore a high value of $T\sub{lim}$ has been chosen, resulting in a low gradient of the linear function. This prevents the follower vehicle to try to reach the desired time gap $T$ as fast as possible with maximal speed but rather motivates the follower vehicle to decelerate early and approach the leading vehicle comfortably.
 
 
 
 The third factor of the reward function aims to reduce the jerk in
-order to achieve comfortable driving and has been designed analogously to the Free-Driving-Policy, 
+order to achieve comfortable driving and has been designed analogously to the Free-Driving Policy, 
 \begin{equation}
 r_3 = -\left(\frac{1}{\dot{a}\sub{comf}} \ \dv{a}{t}\right)^2.
 \end{equation}
@@ -524,8 +509,6 @@ where all the factors are evaluated at time step $t$. The weights (cf.
 Table~\ref{tab:agentParameters}) have been found experimentally and
 can be optimized in future studies.
 
-\martin{A non-emergency relative-speed term is missing, e.g.,
-$r_4=-v\sub{des}/b\sub{comf} (v-v_l)\theta(v-v_l)/g$}
 
 
 
@@ -561,7 +544,7 @@ After reaching stationarity, this process has
 
 \begin{equation}
 \label{eq:tau_AR1}
-\text{and the correlation time (in multiples of $d$) }\tau = -\frac{1}{\ln \phi}, 
+\text{and the correlation time (in multiples of $d$) }\tau = -\frac{1}{\ln \phi}. 
 \end{equation}
  
 To adjust the parameters of the AR(1) process, typical values for real
@@ -569,12 +552,12 @@ leader trajectories has to be defined: With $v_{l,\text{des}}$ as the
 desired speed for the leader, the mean of the AR(1) process is set to
 be $v_{l,\text{des}}/2$ and the standard deviation is set to be
 $v_{l,\text{des}}/2$. The acceleration $a\sub{phys}$ corresponds to
-typical physical leader accelerations. \martin{Relating the acceleration to
+typical physical leader accelerations. Relating the acceleration to
 the physical correlation time $\tau d$ via 
-$a\sub{phys}=v_{l,\text{des}}/(2\tau d)$  and} using Equation \eqref{eq:E_AR1} - \eqref{eq:tau_AR1}, the parameters of the AR(1) process can be calculated as:
+$a\sub{phys}=v_{l,\text{des}}/(2\tau d)$  and using Equation \eqref{eq:E_AR1} - \eqref{eq:tau_AR1}, the parameters of the AR(1) process can be calculated as:
 
 \begin{equation}
-\phi = \martin{\exp\left(-\frac{2a\sub{phys}d}{v_{l,\text{des}}}\right),}
+\phi = \exp\left(-\frac{2a\sub{phys}d}{v_{l,\text{des}}}\right),
 \end{equation}
 
 \begin{equation}
@@ -604,10 +587,7 @@ The assumed typical values for $v_{l,\text{des}}$ and  $a\sub{phys}$ as well as 
 %
 Figure \ref{fig:AR1process} shows an example trajectory of the leading
 vehicle based on the AR(1) process using the parameters of Table
-\ref{tab:AR1Parameters}. If the speed exceeds the defined range of
-$[0, v_{l,\text{des}}]$, it is manually set to the range
-limits. \martinc{Consider applying the lower limit, only, as discussed
-  May 26}
+\ref{tab:AR1Parameters}. After the AR(1) process is calculated for one episode, all speed values below zero are set to zero. This generates training situations, where the leader vehicle stands still for some time, e. g. at t= [\unit[48]{s}, \unit[50]{s}] in Figure \ref{fig:AR1process}. 
 \begin{figure}
 	\centering
 	\includegraphics[width=0.95\textwidth]{images/AR1process}
@@ -625,6 +605,8 @@ limits. \martinc{Consider applying the lower limit, only, as discussed
 %\end{figure}
 %
 %
+
+
 One episode has a simulation time of \unit[50]{s} with a step size of
 $d=\unit[100]{ms}$ resulting in an episode length of $500$
 steps. The initial speeds of the following and leading vehicles are
@@ -632,7 +614,7 @@ randomly set in the range $[0,v\sub{des}]$ and $[0,v_{l,\text{des}}]$,
 respectively. The initial space gap between both is set to \unit[120]{m}. 
 
 \subsection{RL hyperparameters}
-Both neural networks, Critic and Actor, are feed-forward neural networks with two layers of hidden neurons, containing 32 neurons each (see Figure \ref{fig:MRL}). ReLU activation functions are used. We used the same Ornstein-Uhlenbeck model as we used for the Free-Driving-Policy.
+Both neural networks, critic and Actor, are feed-forward neural networks with two layers of hidden neurons, containing 32 neurons each (see Figure \ref{fig:MRL}). ReLU activation functions are used. We used the same Ornstein-Uhlenbeck model as we used for the Free-Driving Policy.
 All DDPG parameters are presented in Table \ref{tab:DDPGparameters}.
 
 
@@ -694,7 +676,7 @@ $g_0+v_lT$ while simultaneously smoothing the leader's speed profile. After the 
 	\centering
 	\includegraphics[width=0.95\textwidth]{images/manipulatedLeader.eps}
 	\caption{Response to an external leading vehicle speed
-          profile. \martinc{Change velocity to speed in all plots}}
+          profile.}
 	\label{fig:manipulatedLeader}
 \end{figure}
 
@@ -773,15 +755,12 @@ that a lower value for $T$ results in closer driving to the
 leader which can be considered as a more ``aggressive''
 driving style. Since this also means that there are less options in
 increasing driving comfort without affecting safety, the follower's
-accelerations and decelerations are higher \martin{than that of the more
-conservative RL agent~3} although the relative
+accelerations and decelerations are higher than that of the more
+conservative RL agent~3 although the relative
 weighting $w\sub{jerk}/w\sub{gap}$ of the safety and comfort aspects in Eq.~\eqref{rt1} and \eqref{rt2} has not been
-changed. \martin{Still, when simulating platoons of the three RL
+changed. Still, when simulating platoons of the three RL
   agents in any order, the accelerations and jerks decrease along the
-  platoon.} \martinc{Probeweise simulieren, obwohl ich sicher bin,
-  dass das der Fall ist. Durchaus auch mal extreme F\"alle wie
-  $T=\unit[0.5]{s}$ oder gar \unit[0.2]{s} (mit $d=\unit[0.05]{s}$)
-  ausprobieren  und schauen, was passiert!}
+  platoon.
 
 \begin{figure}
 	\centering
@@ -796,8 +775,7 @@ changed. \martin{Still, when simulating platoons of the three RL
 To compare the performance of the RL agent with that of
 classical car-following models, we chose the commonly used
 Intelligent-Driver Model (IDM)\cite{Opus} whose acceleration is given
-by \martinc{here, I have left $s^*$ since $g^*$ has already been used for the
-gap reward function}
+by 
 \begin{equation}
 \label{eq:IDM}
 a=a\sub{max}\left(1-\left(\frac{v}{v\sub{des}}\right)^{4}-\left(\frac{s^{*}\left(v, v_l-v\right)}{g}\right)^{2}\right),
@@ -820,15 +798,7 @@ data (cf. Table~\ref{tab:IDMparameters}). The same parameters are also
 assumed for the reward function of the RL agent before it was trained
 on the artificial AR(1) generated leader speed profile. Notice that the RL agent used the Napoli data only
 indirectly by parameterizing its reward function.
-\martinc{Du solltest auch mal testen, was passiert, wenn du die
-  Reward-Funktionen zum Lernen anders parameterisiert. So ist es ja ein wenig
-  unfair, da der RL-Agend beim Lernen schon die volle IDM-Information
-  hat und durch die Dutzende (Hunderte?) von internen
-  Synapsenparameter der verschiedenen Layers durch mehr Parameter
-  eigentlich nur besser werden kann. Ich gehe davon aus, dass dann die
-  Fitfunktion irgendwann schlechter wird, aber die Reward-Funktion
-  nicht. Just exploring; vielleicht ergeben sich interessante
-  Erkenntnisse ...}
+
 \begin{table}
 	\caption{IDM parameters calibrated to the Napoli
             data and also used for the reward function of the RL agent}
@@ -871,7 +841,7 @@ Figure \ref{fig:IDMvsRL} shows the results for: First, the RL agent, calibrated 
 
 
 \section{Conclusion/Discussion}
-This study presented a novel car-following model based on DRL. The proposed model considers free driving, car-following, as well as the transition between both in a way, that approaching the leading vehicle is smooth and comfortable. We used an approach called Modularized Reinforcement Learning (\cite{MRL}) to decompose the multi-goal problem into two subtasks. Two different RL policies have been designed using the Deep Deterministic Policy Gradient algorithm. The Free-Driving-Policy refers to free driving and aims not to exceed a desired speed. The Car-Following-Policy refers to following a vehicle and aims to keep a reasonable gap to a leader vehicle.
+This study presented a novel car-following model based on DRL. The proposed model considers free driving, car-following, as well as the transition between both in a way, that approaching the leading vehicle is smooth and comfortable. We used an approach called Modularized Reinforcement Learning (\cite{MRL}) to decompose the multi-goal problem into two subtasks. Two different RL policies have been designed using the Deep Deterministic Policy Gradient algorithm. The Free-Driving Policy refers to free driving and aims not to exceed a desired speed. The Car-Following Policy refers to following a vehicle and aims to keep a reasonable gap to a leader vehicle.
 
 For each policy, we defined separate reward functions, which reflect traffic safety and comfort aspects. 
 Different driver characteristics can be modeled by adjusting the parameter of the reward function.
@@ -879,11 +849,7 @@ Different driver characteristics can be modeled by adjusting the parameter of th
 The proposed model is trained on leading trajectories based on an AR(1)-process. This leads to high generalization capabilities and a model usage in a wider variety of traffic scenarios. 
 For the evaluation of the trained agents, different traffic scenarios
 have been simulated. The scenarios based on both synthetic and
-\martin{real}  trajectory data,\martinc{Die Napoli-Daten sind
-  *nicht* \emph{naturalistic}. So nennt man nur Daten von Fahrern, die
-  nicht wissen, dass sie beobachtet werden; die Napoli-Daten sind im
-  Gegensatz dazu 
-  \emph{experimental} data, aber natuerlich \emph{real}} bringing the model to its limits. 
+real trajectory data, bringing the model to its limits. 
 In all cases, the car-following model proved to be accident-free and comfortable. Further scenarios showed that traffic oscillations could effectively be dampened with a sequence of trained followers, even if the leader shows large outliers in acceleration.
 
 
